# openai-agents-testkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  index.md
src/openai_agents_testkit/: __init__.py  fixtures.py  models.py
tests/: conftest.py  test_models.py
